--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - pip install coveralls
 # command to run tests
 script:
-  - pytest --cov=rrcf/
+  - pytest --cov=pipedream_solver/
 after_success:
   - coveralls
