Add transport example

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -5,3 +5,5 @@ toc:
         url: /pipedream/hillslope-flow.html
       - page: Simulation context manager 
         url: /pipedream/simulation-context.html
+      - page: Contaminant transport on hillslope
+        url: /pipedream/hillslope-transport.html
