--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -1,4 +1,8 @@
 toc:
+  - title: Overview
+    subfolderitems:
+      - page: Governing equations
+        url: /pipedream/governing-equations.html
   - title: Examples
     subfolderitems:
       - page: Flow on hillslope
