Add docs for hydraulic solver API

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -13,5 +13,7 @@ toc:
         url: /pipedream/hillslope-transport.html
   - title: Reference
     subfolderitems:
+      - page: Hydraulic solver API reference
+        url: /pipedream/hydraulic-solver-api.html
       - page: Model inputs
         url: /pipedream/model-inputs.html
