Add validation to docs

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -11,6 +11,8 @@ toc:
         url: /pipedream/simulation-context.html
       - page: Contaminant transport on hillslope
         url: /pipedream/hillslope-transport.html
+      - page: Validation with real-world network
+        url: /pipedream/validation.html
   - title: Reference
     subfolderitems:
       - page: Hydraulic solver API reference
