--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -15,6 +15,8 @@ toc:
         url: /pipedream/uncoupled-overland-flow.html
       - page: Coupled overland flow
         url: /pipedream/coupled-overland-flow.html
+      - page: Adaptive step size control
+        url: /pipedream/adaptive-stepsize.html
       - page: Validation with real-world network
         url: /pipedream/validation.html
   - title: Reference
