--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -15,6 +15,8 @@ toc:
         url: /pipedream/uncoupled-overland-flow.html
       - page: Coupled overland flow
         url: /pipedream/coupled-overland-flow.html
+      - page: Simple dynamic control example
+        url: /pipedream/simple-control.html
       - page: Adaptive step size control
         url: /pipedream/adaptive-stepsize.html
       - page: Validation with real-world network
