Add model structure to docs

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -3,6 +3,8 @@ toc:
     subfolderitems:
       - page: Governing equations
         url: /pipedream/governing-equations.html
+      - page: Model structure
+        url: /pipedream/model-structure.html
   - title: Examples
     subfolderitems:
       - page: Flow on hillslope
